--- a/sources/stations/F3.md
+++ b/sources/stations/F3.md
@@ -1,12 +1,12 @@
----
+````
 id: F3
 title: How can we build new functions from old?
 dependencies: 
     - F2
 keyQuestions:
     - What happens if we consider the sum or product of two functions?
-    - What do we mean by the _compositiion_ of two functions, and what are some interesting examples?
+    - What do we mean by the _composition_ of two functions, and what are some interesting examples?
     - What do we mean by the _inverse_ of a function, and when does a function have an inverse?
     - In what ways might we transform a function, and what effects do these transformations have?
 
----
+````
