Tweaked key questions in stations G2 and G8

--- a/sources/stations/G8.md
+++ b/sources/stations/G8.md
@@ -4,8 +4,8 @@ title: What happens when we move to three dimensions?
 dependencies: 
     - G7 
 keyQuestions:
-    - What are the equations of key objects such as planes or spheres?
-    - In how many ways can we describe key objects such as planes and spheres?
+    - What are the equations of key objects such as lines, planes or spheres?
+    - In how many ways can we describe key objects such as lines, planes and spheres?
     - Can we find distances between objects in three dimensions?
 
 ````
