moved station key questions into content since they contain markdown as well as maths.

--- a/sources/stations/A4.md
+++ b/sources/stations/A4.md
@@ -3,10 +3,15 @@ id: A4
 title: __Help!__
 dependencies: 
     - A3
-keyQuestions:
-    - What is $x^a x^b$?
-    - What is $(x^a)^b$?
-    - What is $x^a y^a$?
-    - What do we mean by $x^{-a}$ and $x^{1/a}$?
-        
 ````
+##Key Questions:
+
+1. What is $x^a x^b$?
+
+1. What is $(x^a)^b$?
+
+1. What is $x^a y^a$?
+
+1. What do we mean by $x^{-a}$ and $x^{1/a}$?
+        
+
