--- a/sources/stations/C12.md
+++ b/sources/stations/C12.md
@@ -3,9 +3,12 @@ id: C12
 title: Is there a function whose derivative is $1/x$?
 dependencies: 
     - C11
-keyQuestions:
-    - Is there a function whose derivative is $1/x$?
-    - What properties does it have?
-    - What is its relationship to the function in C10?
-
 ````
+##Key Questions:
+
+1. Is there a function whose derivative is $1/x$?
+
+1. What properties does it have?
+
+1. What is its relationship to the function in C10?
+
