--- a/sources/stations/C14.md
+++ b/sources/stations/C14.md
@@ -4,7 +4,8 @@ title: Can we write a function as an infinite series of the form $f(x) = \sum_{n
 dependencies: 
     - C13
     - A8
-keyQuestions:
-    - __Help!__
-
 ````
+##Key Questions:
+
+1. __Help!__
+
