--- a/sources/stations/C15.md
+++ b/sources/stations/C15.md
@@ -4,10 +4,15 @@ title: What are the power series of our favourite functions?
 dependencies: 
     - C14
     - A9
-keyQuestions:
-    - What is the power series for $\exp$?
-    - What are the power series for $\sin$ and $\cos$?
-    - What is the power series for $\log(1+x)$?
-    - Can we think of the binomial theorem as telling us about a power series?
-    
 ````
+##Key Questions:
+
+1. What is the power series for $\exp$?
+
+1. What are the power series for $\sin$ and $\cos$?
+
+1. What is the power series for $\log(1+x)$?
+
+1. Can we think of the binomial theorem as telling us about a power series?
+    
+
