--- a/sources/stations/C16.md
+++ b/sources/stations/C16.md
@@ -3,7 +3,8 @@ id: C16
 title: __Something about hyperbolics__?
 dependencies: 
     - C15
-keyQuestions:
-    - __How do we want to introduce hyperbolic functions__?
-
 ````
+##Key Questions:
+
+1. __How do we want to introduce hyperbolic functions__?
+
