--- a/sources/stations/E4.md
+++ b/sources/stations/E4.md
@@ -5,9 +5,11 @@ dependencies:
     - E3
     - G3
 thread: Equations and major functions
-keyQuestions:
-    - How can we solve equations involving trigonometric functions?
-    - How many solutions do we expect trigonometric equations to have?
-    - What is the difference between solving a trigonometric equation and proving a trigonometric identity?
-
 ````
+##Key Questions:
+
+1. How can we solve equations involving trigonometric functions?
+
+1. How many solutions do we expect trigonometric equations to have?
+
+1. What is the difference between solving a trigonometric equation and proving a trigonometric identity?
