--- a/sources/stations/E5.md
+++ b/sources/stations/E5.md
@@ -4,8 +4,9 @@ title: How can we use and solve equations built from step functions and the modu
 dependencies: 
     - E4
 thread: Equations and major functions
-keyQuestions:
-    - What equations involving the modulus function can we solve?
-    - What interesting equations can we formulate using step functions?
-
 ````
+##Key Questions:
+
+1. What equations involving the modulus function can we solve?
+
+1. What interesting equations can we formulate using step functions?
