--- a/sources/stations/E9.md
+++ b/sources/stations/E9.md
@@ -5,9 +5,12 @@ dependencies:
     - E8
     - A7
 thread: Further equations
-keyQuestions:
-    - What is a functional equation?
-    - What strategies do we have for solving functional equations?
-    - What is a recurrence relation, and how can we solve it?
-
 ````
+##Key Questions:
+
+1. What is a functional equation?
+
+1. What strategies do we have for solving functional equations?
+
+1. What is a recurrence relation, and how can we solve it?
+
