--- a/sources/stations/F1.md
+++ b/sources/stations/F1.md
@@ -4,10 +4,14 @@ title: What are functions, and why are they useful?
 theme: Pre-calculus
 dependencies:
     - null
-keyQuestions:
-    - What are some key examples of functions and things that aren't functions?
-    - What do we mean by the _domain_ and _range_ of a function, and why are they important?
-    - In what ways might we represent a function?
-    - Can we find multiple expressions for the same function?
-
 ````
+##Key Questions:
+
+1. What are some key examples of functions and things that aren't functions?
+
+1. What do we mean by the _domain_ and _range_ of a function, and why are they important?
+
+1. In what ways might we represent a function?
+
+1. Can we find multiple expressions for the same function?
+
