--- a/sources/stations/F6.md
+++ b/sources/stations/F6.md
@@ -4,8 +4,10 @@ title: What are the properties of the exponential and logarithm functions?
 dependencies:
     - F5
     - C12
-keyQuestions:
-    - What properties does the exponential function have?
-    - What properties does the logarithm function have?
-
 ````
+##Key Questions:
+
+1. What properties does the exponential function have?
+
+1. What properties does the logarithm function have?
+
