--- a/sources/stations/G5.md
+++ b/sources/stations/G5.md
@@ -4,9 +4,11 @@ title: How can differentiation help with geometry?
 dependencies: 
     - G4
     - C3
-keyQuestions:
-    - When and how can we find the equation of a tangent to a function or object at a point?
-    - When and how can we find the equation of a normal to a function or object at a point?
-    - What is the relationship between a tangent and a normal?
-
 ````
+##Key Questions:
+
+1. When and how can we find the equation of a tangent to a function or object at a point?
+
+1. When and how can we find the equation of a normal to a function or object at a point?
+
+1. What is the relationship between a tangent and a normal?
