--- a/sources/stations/A3.md
+++ b/sources/stations/A3.md
@@ -3,8 +3,11 @@ id: A3
 title: How can we expand $(a+b)^n$ for positive integers $n$?
 dependencies: 
     - A2
-keyQuestions:
-    - How can we expand $(1+x)^n$ for positive integers $n$?
-    - How can we expand $(a+b)^n$ for positive integers $n$?
-        
 ````
+##Key Questions:
+
+1. How can we expand $(1+x)^n$ for positive integers $n$?
+
+1. How can we expand $(a+b)^n$ for positive integers $n$?
+
+        
