--- a/sources/stations/A5.md
+++ b/sources/stations/A5.md
@@ -3,9 +3,12 @@ id: A5
 title: __Help!__
 dependencies: 
     - A4
-keyQuestions:
-    - How do we define $\log_a b$, where $a$ is a positive integer?
-    - What rules does $\log_a$ satisfy?
-    - Why are logarithms useful?
-
 ````
+##Key Questions:
+
+1. How do we define $\log_a b$, where $a$ is a positive integer?
+
+1. What rules does $\log_a$ satisfy?
+
+1. Why are logarithms useful?
+
