--- a/sources/stations/A6.md
+++ b/sources/stations/A6.md
@@ -3,7 +3,8 @@ id: A6
 title: When and how can we write a rational function as a sum of rational functions where each denominator is linear?
 dependencies: 
     - A5
-keyQuestions:
-    - __Help!__
-
 ````
+##Key Questions:
+
+1. __Help!__
+
