--- a/sources/stations/A9.md
+++ b/sources/stations/A9.md
@@ -3,9 +3,9 @@ id: A9
 title: How can we expand $(a+b)^n$ when $n$ is any real number?
 dependencies: 
     - A8
-keyQuestions:
-    - When and how can we expand $(1+x)^n$?
-    - When and how can we expand $(a+b)^n$?
-
-
 ````
+##Key Questions:
+
+1. When and how can we expand $(1+x)^n$?
+
+1. When and how can we expand $(a+b)^n$?
