--- a/sources/stations/C1.md
+++ b/sources/stations/C1.md
@@ -3,8 +3,10 @@ id: C1
 title: What is calculus about, and what is it useful for?
 dependencies:
     - null
-keyQuestions:
-    - Why might we want to find the gradient of a curve, and what might we mean by that?
-    - Why might we want to find the area under a curve, and what might we mean by that?
-        
 ````
+##Key Questions:
+
+1. Why might we want to find the gradient of a curve, and what might we mean by that?
+
+1. Why might we want to find the area under a curve, and what might we mean by that?
+        
