--- a/sources/stations/C10.md
+++ b/sources/stations/C10.md
@@ -4,8 +4,10 @@ title: Can we differentiate and integrate some more of our favourite functions?
 dependencies: 
     - C9
     - A6
-keyQuestions:
-     - What can we learn by incorporating inverse trigonometric functions into our repertoire?
-     - What can we learn by incorporating rational functions into our repertoire?
-
 ````
+keyQuestions:
+
+1. What can we learn by incorporating inverse trigonometric functions into our repertoire?
+
+1. What can we learn by incorporating rational functions into our repertoire?
+
