--- a/sources/stations/C13.md
+++ b/sources/stations/C13.md
@@ -4,8 +4,10 @@ title: What sort of objects are differentiation and integration?
 dependencies: 
     - C12
     - F6
-keyQuestions:
-    - What can we learn by thinking of differentiation as a function of functions?
-    - What can we learn by thinking of integration as a function of functions?
-
 ````
+##Key Questions:
+
+1. What can we learn by thinking of differentiation as a function of functions?
+
+1. What can we learn by thinking of integration as a function of functions?
+
