--- a/sources/stations/C4.md
+++ b/sources/stations/C4.md
@@ -3,9 +3,12 @@ id: C4
 title: What does it mean to find the derivative of a sum or product of two functions?
 dependencies: 
     - C3
-keyQuestions:
-    - If we know the derivatives of two functions at a point, can we find the derivative of their sum at that point?
-    - If we know the derivatives of two functions at a point, can we find the derivative of their product at that point?
-    - Can we find the derivative of $1/x$?
-        
 ````
+##Key Questions:
+
+1. If we know the derivatives of two functions at a point, can we find the derivative of their sum at that point?
+
+1. If we know the derivatives of two functions at a point, can we find the derivative of their product at that point?
+
+1. Can we find the derivative of $1/x$?
+        
