--- a/sources/stations/C6.md
+++ b/sources/stations/C6.md
@@ -3,14 +3,21 @@ id: C6
 title: Is there an operation that is inverse to differentiation, and if so is it useful?
 dependencies: 
     - C5
-keyQuestions:
-    - What do we mean by an antiderivative?
-    - Can we find an antiderivative for every polynomial?
-    - What do we mean by integration?
-    - What is the connection between differentiation and integration?
-    - What are the similarities and differences between definite and indefinite integration?
-    - What do we mean by the area under a curve, and when can we compute it?
-    - If we can't compute an integral precisely, how might we obtain a good approximation instead?
-    - How can we use integration to find the volume of a solid of revolution?
-
 ````
+##Key Questions:
+
+1. What do we mean by an antiderivative?
+
+1. Can we find an antiderivative for every polynomial?
+
+1. What do we mean by integration?
+
+1. What is the connection between differentiation and integration?
+
+1. What are the similarities and differences between definite and indefinite integration?
+
+1. What do we mean by the area under a curve, and when can we compute it?
+
+1. If we can't compute an integral precisely, how might we obtain a good approximation instead?
+
+1. How can we use integration to find the volume of a solid of revolution?
