--- a/sources/stations/C7.md
+++ b/sources/stations/C7.md
@@ -5,10 +5,14 @@ dependencies:
     - C6
     - F4
     - G3
-keyQuestions:
-    - How can we find the derivative of sin or cos at a point?
-    - How can we integrate sin or cos?
-    - What does this new knowledge tell us about the functions sin and cos?
-    - How do $\sin(x)$ and $\cos(x)$ behave for small values of $x$?
-
 ````
+##Key Questions:
+
+1. How can we find the derivative of sin or cos at a point?
+
+1. How can we integrate sin or cos?
+
+1. What does this new knowledge tell us about the functions sin and cos?
+
+1. How do $\sin(x)$ and $\cos(x)$ behave for small values of $x$?
+
