--- a/sources/stations/E1.md
+++ b/sources/stations/E1.md
@@ -3,12 +3,17 @@ id: E1
 title: What does it mean to solve an equation or inequality, and why is this a useful thing to do?
 dependencies:
     - null
-keyQuestions:
-    - How can we formulate an equation or an inequality?
-    - What do the symbols $=$, $<$ and $\leq$ mean, and how should we use them correctly?
-    - What are we allowed to do to an equation or inequality?
-    - How many solutions might an equation have?
-    - What happens if our equation involves more than one unknown quantity?
-    - If we cannot solve an equation, are there still useful things that we can say about its solutions?
-
 ````
+##Key Questions:
+
+1. How can we formulate an equation or an inequality?
+
+1. What do the symbols $=$, $<$ and $\leq$ mean, and how should we use them correctly?
+
+1. What are we allowed to do to an equation or inequality?
+
+1. How many solutions might an equation have?
+
+1. What happens if our equation involves more than one unknown quantity?
+
+1. If we cannot solve an equation, are there still useful things that we can say about its solutions?
