--- a/sources/stations/E2.md
+++ b/sources/stations/E2.md
@@ -4,11 +4,15 @@ title: How is the solution of equations related to problems in geometry?
 dependencies: 
     - E1
     - G2
-keyQuestions:
-    - What is the equation of a straight line?
-    - What is the equation of a parabola?
-    - What is the equation of a circle?
-    - How is the process of solving simultaneous equations related to geometry?
-    - Can we find the points of intersection of geometrical objects by considering their equations?
-
 ````
+##Key Questions:
+
+1. What is the equation of a straight line?
+
+1. What is the equation of a parabola?
+
+1. What is the equation of a circle?
+
+1. How is the process of solving simultaneous equations related to geometry?
+
+1. Can we find the points of intersection of geometrical objects by considering their equations?
