--- a/sources/stations/E6.md
+++ b/sources/stations/E6.md
@@ -5,8 +5,9 @@ dependencies:
     - E5
     - A5
 thread: Equations and major functions
-keyQuestions:
-    - What sorts of equations can we solve using logarithms?
-    - What happens to a power law if we interpret it using logarithms?
-
 ````
+##Key Questions:
+
+1. What sorts of equations can we solve using logarithms?
+
+1. What happens to a power law if we interpret it using logarithms?
