--- a/sources/stations/E7.md
+++ b/sources/stations/E7.md
@@ -4,11 +4,15 @@ title: How can we build an equation or transform an equation into a more conveni
 dependencies: 
     - E6
 thread: Further equations
-keyQuestions:
-    - How can we identify possible candidate equations from data or a graph?
-    - How can dimensional analysis help us to form an equation?
-    - What effect does changing units or coordinates have on an equation?
-    - How can auxiliary variables make an equation more amenable to solution?
-    - What does it mean to give an equation in parametric form, and what are some good examples?
-
 ````
+##Key Questions:
+
+1. How can we identify possible candidate equations from data or a graph?
+
+1. How can dimensional analysis help us to form an equation?
+
+1. What effect does changing units or coordinates have on an equation?
+
+1. How can auxiliary variables make an equation more amenable to solution?
+
+1. What does it mean to give an equation in parametric form, and what are some good examples?
