--- a/sources/stations/E8.md
+++ b/sources/stations/E8.md
@@ -4,8 +4,10 @@ title: What additional things can we do with polynomial equations?
 dependencies: 
     - E7
 thread: Further equations
-keyQuestions:
-    - How are the coefficients of a polynomial equation related to the roots of a polynomial, and how is this useful?
-    - How can we solve equations involving rational functions?
-
 ````
+##Key Questions:
+
+1. How are the coefficients of a polynomial equation related to the roots of a polynomial, and how is this useful?
+
+1. How can we solve equations involving rational functions?
+
