--- a/sources/stations/F4.md
+++ b/sources/stations/F4.md
@@ -4,14 +4,22 @@ title: What are the properties of our key examples of functions?
 dependencies: 
     - F3
     - E3
-keyQuestions:
-    - What properties do polynomials have?
-    - What properties do trigonometric functions have?
-    - What are the addition formulae for the sine and cosine functions?
-    - What properties does the modulus function have?
-    - What properties do functions such as $f(x) = x^{1/n}$ and $f(x) = 1/x$ have?
-    - What properties do rational functions have?
-    - What properties do inverse trigonometric functions have?
-    - How can we deduce properties of complicated functions by understanding the properties of their simpler component parts?
-            
 ````
+##Key Questions:
+
+1. What properties do polynomials have?
+
+1. What properties do trigonometric functions have?
+
+1. What are the addition formulae for the sine and cosine functions?
+
+1. What properties does the modulus function have?
+
+1. What properties do functions such as $f(x) = x^{1/n}$ and $f(x) = 1/x$ have?
+
+1. What properties do rational functions have?
+
+1. What properties do inverse trigonometric functions have?
+
+1. How can we deduce properties of complicated functions by understanding the properties of their simpler component parts?
+            
