--- a/sources/stations/G1.md
+++ b/sources/stations/G1.md
@@ -2,11 +2,15 @@
 id: G1
 title: What is geometry, why is it important, and what do we already know about geometry?
 dependencies:
-keyQuestions:
-    - What do we mean by _geometry_?
-    - Why is geometry useful?
-    - How can we pass between geometry and algebra, and why is this a useful thing to be able to do?
-    - How can Pythagoras's theorem help us to find the distance between two points, and the distance from a point to a line?
-    - What are the key examples of geometrical objects in two and three dimensions?
-
 ````
+##Key Questions:
+
+1. What do we mean by _geometry_?
+
+1. Why is geometry useful?
+
+1. How can we pass between geometry and algebra, and why is this a useful thing to be able to do?
+
+1. How can Pythagoras's theorem help us to find the distance between two points, and the distance from a point to a line?
+
+1. What are the key examples of geometrical objects in two and three dimensions?
