--- a/sources/stations/G3.md
+++ b/sources/stations/G3.md
@@ -3,11 +3,15 @@ id: G3
 title: What interesting geometry can we do with triangles?
 dependencies: 
     - G2
-keyQuestions:
-    - What is the centre of a triangle?
-    - What can trigonometry tell us about right-angled triangles?
-    - What can trigonometry tell us about triangles that are not necessarily right-angled?
-    - How can we find the area of a triangle?
-    - How can we extend the definition of the trigonometric functions to all real numbers?
-
 ````
+##Key Questions:
+
+1. What is the centre of a triangle?
+
+1. What can trigonometry tell us about right-angled triangles?
+
+1. What can trigonometry tell us about triangles that are not necessarily right-angled?
+
+1. How can we find the area of a triangle?
+
+1. How can we extend the definition of the trigonometric functions to all real numbers?
