--- a/sources/stations/G4.md
+++ b/sources/stations/G4.md
@@ -3,10 +3,13 @@ id: G4
 title: What interesting geometry can we do with circles?
 dependencies: 
     - G3
-keyQuestions:
-    - What are the circle theorems?
-    - How are the trigonometric functions related to circles?
-    - What measures could we use for angles?
-    - How can we find the arc length and area of a sector?
-
 ````
+##Key Questions:
+
+1. What are the circle theorems?
+
+1. How are the trigonometric functions related to circles?
+
+1. What measures could we use for angles?
+
+1. How can we find the arc length and area of a sector?
