--- a/sources/stations/G6.md
+++ b/sources/stations/G6.md
@@ -4,9 +4,11 @@ title: How can integration help with geometry?
 dependencies: 
     - G5
     - C6
-keyQuestions:
-    - How does integration relate to areas?
-    - How does integration relate to volumes?
-    - How are differentiation and integration related?
-
 ````
+##Key Questions:
+
+1. How does integration relate to areas?
+
+1. How does integration relate to volumes?
+
+1. How are differentiation and integration related?
