--- a/sources/stations/G7.md
+++ b/sources/stations/G7.md
@@ -3,9 +3,11 @@ id: G7
 title: What other coordinate systems are there?
 dependencies: 
     - G6 
-keyQuestions:
-    - Why might Cartesian coordinates sometimes be inconvenient?
-    - What are _polar coordinates_, and when are they useful?
-    - What are good examples of curves that can be described conveniently in polar coordinates?
-
 ````
+##Key Questions:
+
+1. Why might Cartesian coordinates sometimes be inconvenient?
+
+1. What are _polar coordinates_, and when are they useful?
+
+1. What are good examples of curves that can be described conveniently in polar coordinates?
