--- a/sources/stations/G8.md
+++ b/sources/stations/G8.md
@@ -3,9 +3,11 @@ id: G8
 title: What happens when we move to three dimensions?
 dependencies: 
     - G7 
-keyQuestions:
-    - What are the equations of key objects such as lines, planes or spheres?
-    - In how many ways can we describe key objects such as lines, planes and spheres?
-    - Can we find distances between objects in three dimensions?
-
 ````
+##Key Questions:
+
+1. What are the equations of key objects such as lines, planes or spheres?
+
+1. In how many ways can we describe key objects such as lines, planes and spheres?
+
+1. Can we find distances between objects in three dimensions?
