--- a/sources/stations/G9.md
+++ b/sources/stations/G9.md
@@ -3,10 +3,13 @@ id: G9
 title: What is the same and what is different about geometry on a sphere?
 dependencies: 
     - G8
-keyQuestions:
-    - What do we mean by a _line_ on a sphere?
-    - What interesting properties do spherical lines have?
-    - What interesting properties do spherical triangles have?
-    - What are _spherical polar coordinates_, and why are they useful?
-
 ````
+##Key Questions:
+
+1. What do we mean by a _line_ on a sphere?
+
+1. What interesting properties do spherical lines have?
+
+1. What interesting properties do spherical triangles have?
+
+1. What are _spherical polar coordinates_, and why are they useful?
