enabled mocha, installed regex-replace, used it to remove Key Question colons

--- a/sources/stations/A1.md
+++ b/sources/stations/A1.md
@@ -2,7 +2,7 @@
 id: A1
 title: Which numbers can be written as the ratio of two integers?
 ````
-##Key Questions:
+##Key Questions
 
 1. What do we mean by _rational_ and _irrational_ numbers?
 
