--- a/sources/stations/A3.md
+++ b/sources/stations/A3.md
@@ -4,7 +4,7 @@ title: How can we expand $(a+b)^n$ for positive integers $n$?
 dependencies: 
     - A2
 ````
-##Key Questions:
+##Key Questions
 
 1. How can we expand $(1+x)^n$ for positive integers $n$?
 
