--- a/sources/stations/A5.md
+++ b/sources/stations/A5.md
@@ -4,7 +4,7 @@ title: __Help!__
 dependencies: 
     - A4
 ````
-##Key Questions:
+##Key Questions
 
 1. How do we define $\log_a b$, where $a$ is a positive integer?
 
