--- a/sources/stations/A6.md
+++ b/sources/stations/A6.md
@@ -4,7 +4,7 @@ title: When and how can we write a rational function as a sum of rational functi
 dependencies: 
     - A5
 ````
-##Key Questions:
+##Key Questions
 
 1. __Help!__
 
