--- a/sources/stations/A7.md
+++ b/sources/stations/A7.md
@@ -5,7 +5,7 @@ dependencies:
     - A6
     - NA1
 ````
-##Key Questions:
+##Key Questions
 
 1. What does it mean to specify the general term of a sequence?
 
