--- a/sources/stations/C1.md
+++ b/sources/stations/C1.md
@@ -2,7 +2,7 @@
 id: C1
 title: What is calculus about, and what is it useful for?
 ````
-##Key Questions:
+##Key Questions
 
 1. Why might we want to find the gradient of a curve, and what might we mean by that?
 
