--- a/sources/stations/C10.md
+++ b/sources/stations/C10.md
@@ -5,7 +5,7 @@ dependencies:
     - C9
     - A6
 ````
-keyQuestions:
+##Key Questions
 
 1. What can we learn by incorporating inverse trigonometric functions into our repertoire?
 
