--- a/sources/stations/C11.md
+++ b/sources/stations/C11.md
@@ -5,7 +5,7 @@ dependencies:
     - C10
     - A5
 ````
-##Key Questions:
+##Key Questions
 
 1. Is there a function that equals its own derivative?
 
