--- a/sources/stations/C12.md
+++ b/sources/stations/C12.md
@@ -4,7 +4,7 @@ title: Is there a function whose derivative is $1/x$?
 dependencies: 
     - C11
 ````
-##Key Questions:
+##Key Questions
 
 1. Is there a function whose derivative is $1/x$?
 
