--- a/sources/stations/C13.md
+++ b/sources/stations/C13.md
@@ -5,7 +5,7 @@ dependencies:
     - C12
     - F6
 ````
-##Key Questions:
+##Key Questions
 
 1. What can we learn by thinking of differentiation as a function of functions?
 
