--- a/sources/stations/C3.md
+++ b/sources/stations/C3.md
@@ -6,7 +6,7 @@ dependencies:
     - E2
     - G5
 ````
-##Key Questions:
+##Key Questions
 
 1. What do we mean by the tangent and normal of a function at a point?
 
