--- a/sources/stations/C5.md
+++ b/sources/stations/C5.md
@@ -4,7 +4,7 @@ title: When and how can we locate maxima and minima of polynomials?
 dependencies: 
     - C4
 ````
-##Key Questions:
+##Key Questions
 
 1. What do we mean by a _local maximum_ and a _global maximum_?
 
