--- a/sources/stations/C6.md
+++ b/sources/stations/C6.md
@@ -4,7 +4,7 @@ title: Is there an operation that is inverse to differentiation, and if so is it
 dependencies: 
     - C5
 ````
-##Key Questions:
+##Key Questions
 
 1. What do we mean by an antiderivative?
 
