--- a/sources/stations/C7.md
+++ b/sources/stations/C7.md
@@ -6,7 +6,7 @@ dependencies:
     - F4
     - G3
 ````
-##Key Questions:
+##Key Questions
 
 1. How can we find the derivative of sin or cos at a point?
 
