--- a/sources/stations/C8.md
+++ b/sources/stations/C8.md
@@ -4,7 +4,7 @@ title: There are various ways to build new functions from old.  When can we diff
 dependencies: 
     - C7
 ````
-##Key Questions:
+##Key Questions
 
 1. When and how can we differentiate the composition of two functions?
 
