--- a/sources/stations/C9.md
+++ b/sources/stations/C9.md
@@ -4,7 +4,7 @@ title: Which of the things in C8 can we undo via integration?
 dependencies: 
     - C8
 ````
-##Key Questions:
+##Key Questions
 
 1. When and how can we integrate the sum of two functions?
 
