--- a/sources/stations/E3.md
+++ b/sources/stations/E3.md
@@ -4,7 +4,7 @@ title: What can we say about solutions of polynomial equations?
 dependencies: 
     - E2
 ````
-##Key Questions:
+##Key Questions
 
 1. How can we solve a quadratic equation?
 
