--- a/sources/stations/E4.md
+++ b/sources/stations/E4.md
@@ -6,7 +6,7 @@ dependencies:
     - G3
 thread: Equations and major functions
 ````
-##Key Questions:
+##Key Questions
 
 1. How can we solve equations involving trigonometric functions?
 
