--- a/sources/stations/E5.md
+++ b/sources/stations/E5.md
@@ -5,7 +5,7 @@ dependencies:
     - E4
 thread: Equations and major functions
 ````
-##Key Questions:
+##Key Questions
 
 1. What equations involving the modulus function can we solve?
 
