--- a/sources/stations/E6.md
+++ b/sources/stations/E6.md
@@ -6,7 +6,7 @@ dependencies:
     - A5
 thread: Equations and major functions
 ````
-##Key Questions:
+##Key Questions
 
 1. What sorts of equations can we solve using logarithms?
 
