--- a/sources/stations/F1.md
+++ b/sources/stations/F1.md
@@ -3,7 +3,7 @@ id: F1
 title: What are functions, and why are they useful?
 theme: Pre-calculus
 ````
-##Key Questions:
+##Key Questions
 
 1. What are some key examples of functions and things that aren't functions?
 
