--- a/sources/stations/F2.md
+++ b/sources/stations/F2.md
@@ -5,7 +5,7 @@ dependencies:
     - F1
     - G3
 ````
-##Key Questions:
+##Key Questions
 
 1. What are the connections between algebraic and graphical representations of a function?
 
