--- a/sources/stations/F3.md
+++ b/sources/stations/F3.md
@@ -4,7 +4,7 @@ title: How can we build new functions from old?
 dependencies: 
     - F2
 ````
-##Key Questions:
+##Key Questions
 
 1. What happens if we consider the sum or product of two functions?
 
