--- a/sources/stations/F5.md
+++ b/sources/stations/F5.md
@@ -5,7 +5,7 @@ dependencies:
     - F4
     - C7
 ````
-##Key Questions:
+##Key Questions
 
 1. How can we use ideas from calculus to help us understand the properties of a function?
 
