--- a/sources/stations/F6.md
+++ b/sources/stations/F6.md
@@ -5,7 +5,7 @@ dependencies:
     - F5
     - C12
 ````
-##Key Questions:
+##Key Questions
 
 1. What properties does the exponential function have?
 
