--- a/sources/stations/G1.md
+++ b/sources/stations/G1.md
@@ -3,7 +3,7 @@ id: G1
 title: What is geometry, why is it important, and what do we already know about geometry?
 dependencies:
 ````
-##Key Questions:
+##Key Questions
 
 1. What do we mean by _geometry_?
 
