--- a/sources/stations/G2.md
+++ b/sources/stations/G2.md
@@ -5,7 +5,7 @@ dependencies:
     - G1
     - E2
 ````
-##Key Questions:
+##Key Questions
 
 1. Which of our key examples of geometrical objects in two or three dimensions can we describe as regions of $\mathbb{R}^2$ or $\mathbb{R}^3$ bounded by lines or planes?
 
