--- a/sources/stations/G4.md
+++ b/sources/stations/G4.md
@@ -4,7 +4,7 @@ title: What interesting geometry can we do with circles?
 dependencies: 
     - G3
 ````
-##Key Questions:
+##Key Questions
 
 1. What are the circle theorems?
 
