--- a/sources/stations/G5.md
+++ b/sources/stations/G5.md
@@ -5,7 +5,7 @@ dependencies:
     - G4
     - C3
 ````
-##Key Questions:
+##Key Questions
 
 1. When and how can we find the equation of a tangent to a function or object at a point?
 
