--- a/sources/stations/G8.md
+++ b/sources/stations/G8.md
@@ -4,7 +4,7 @@ title: What happens when we move to three dimensions?
 dependencies: 
     - G7 
 ````
-##Key Questions:
+##Key Questions
 
 1. What are the equations of key objects such as lines, planes or spheres?
 
