--- a/sources/stations/A2.md
+++ b/sources/stations/A2.md
@@ -4,7 +4,7 @@ title: Help!
 dependencies: 
     - A1
 ````
-##Key Questions: 
+##Key Questions 
 
 1. How do we define square roots, cube roots, $n^{\textrm{th}}$ roots?
 
