--- a/sources/stations/A8.md
+++ b/sources/stations/A8.md
@@ -4,7 +4,7 @@ title: When and how can we sum an infinite series?
 dependencies: 
     - A7
 ````
-##Key Questions:
+##Key Questions
 
 1. What does it mean for a series to _converge_ or _diverge_?
 
