--- a/sources/stations/A9.md
+++ b/sources/stations/A9.md
@@ -4,7 +4,7 @@ title: How can we expand $(a+b)^n$ when $n$ is any real number?
 dependencies: 
     - A8
 ````
-##Key Questions:
+##Key Questions
 
 1. When and how can we expand $(1+x)^n$?
 
