--- a/sources/stations/C16.md
+++ b/sources/stations/C16.md
@@ -4,7 +4,7 @@ title: __Something about hyperbolics__?
 dependencies: 
     - C15
 ````
-##Key Questions:
+##Key Questions
 
 1. __How do we want to introduce hyperbolic functions__?
 
