--- a/sources/stations/C2.md
+++ b/sources/stations/C2.md
@@ -4,7 +4,7 @@ title: How can we find the gradient of a polynomial at a point?
 dependencies: 
     - C1
 ````
-##Key Questions:
+##Key Questions
 
 1. What do we mean by the _derivative_ of a function at a point?
 
