--- a/sources/stations/C4.md
+++ b/sources/stations/C4.md
@@ -4,7 +4,7 @@ title: What does it mean to find the derivative of a sum or product of two funct
 dependencies: 
     - C3
 ````
-##Key Questions:
+##Key Questions
 
 1. If we know the derivatives of two functions at a point, can we find the derivative of their sum at that point?
 
