--- a/sources/stations/E1.md
+++ b/sources/stations/E1.md
@@ -2,7 +2,7 @@
 id: E1
 title: What does it mean to solve an equation or inequality, and why is this a useful thing to do?
 ````
-##Key Questions:
+##Key Questions
 
 1. How can we formulate an equation or an inequality?
 
