--- a/sources/stations/E7.md
+++ b/sources/stations/E7.md
@@ -5,7 +5,7 @@ dependencies:
     - E6
 thread: Further equations
 ````
-##Key Questions:
+##Key Questions
 
 1. How can we identify possible candidate equations from data or a graph?
 
