--- a/sources/stations/E8.md
+++ b/sources/stations/E8.md
@@ -5,7 +5,7 @@ dependencies:
     - E7
 thread: Further equations
 ````
-##Key Questions:
+##Key Questions
 
 1. How are the coefficients of a polynomial equation related to the roots of a polynomial, and how is this useful?
 
