--- a/sources/stations/G3.md
+++ b/sources/stations/G3.md
@@ -4,7 +4,7 @@ title: What interesting geometry can we do with triangles?
 dependencies: 
     - G2
 ````
-##Key Questions:
+##Key Questions
 
 1. What is the centre of a triangle?
 
