--- a/sources/stations/G7.md
+++ b/sources/stations/G7.md
@@ -4,7 +4,7 @@ title: What other coordinate systems are there?
 dependencies: 
     - G6 
 ````
-##Key Questions:
+##Key Questions
 
 1. Why might Cartesian coordinates sometimes be inconvenient?
 
