--- a/sources/stations/G9.md
+++ b/sources/stations/G9.md
@@ -4,7 +4,7 @@ title: What is the same and what is different about geometry on a sphere?
 dependencies: 
     - G8
 ````
-##Key Questions:
+##Key Questions
 
 1. What do we mean by a _line_ on a sphere?
 
