BROKEN - more pervasiveIdeas stuff

--- a/sources/stations/G2.md
+++ b/sources/stations/G2.md
@@ -18,3 +18,17 @@ dependencies:
 1. How can we use algebra to find the intersections of geometric objects?
 
 1. Which shapes can easily be described algebraically, and which is it harder to express in this way?
+
+paragraph 1
+
+<div class="chalk">
+This paragraph is chalky
+</div>
+
+paragraph 2
+
+<div class="chalk pull-right">
+This paragraph is chalky and appears to the right of paragraph 3
+</div>
+
+paragraph 3
