sorting after clearance now ok, and added clearance awareness to stations

--- a/sources/stations/A7.md
+++ b/sources/stations/A7.md
@@ -1,6 +1,7 @@
 ````
 id: A7
 title: When and how can we find the general term and sum of a finite sequence?
+clearance: 3
 dependencies: 
     - A6
     - NA1
