--- a/sources/stations/F2.md
+++ b/sources/stations/F2.md
@@ -1,6 +1,7 @@
 ````
 id: F2
 title: How can we represent a function by a graph, and how are key properties of a function visible on a graph?
+clearance: 3
 dependencies: 
     - F1
     - G3
