--- a/sources/stations/F6.md
+++ b/sources/stations/F6.md
@@ -1,6 +1,7 @@
 ````
 id: F6
 title: What are the properties of the exponential and logarithm functions?
+clearance: 3
 dependencies:
     - F5
     - C12
