get some aspects of resource generation working. Latex must still be run separately

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -8,9 +8,9 @@
 \usepackage{fontspec}
 \setmainfont{Helvetica Neue}
 \setsansfont{Helvetica Neue}
-\newfontfamily\ChalkFont[Path = ../../../app/fonts/]{Chalkboard.ttc}
+\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Chalkboard.ttc}
 \newfontfamily\FontAwesome[
-  Path = ../../../app/fonts/,
+  Path = <%= fontpath %>,
   UprightFont = *,
   BoldFont = *,
   ItalicFont = *,%
