--- a/layouts/station.tex
+++ b/layouts/station.tex
@@ -6,7 +6,7 @@
 %%% The station title and icon
 \noindent {
 \definecolor{tempcolor}{HTML}{<%=meta.colour.substring(1).toUpperCase()%>}
-\markboth{STATIONS}{<%=meta.id%>}
+\markboth{}{}
 \centering
 \Large\sectfont
 \begin{tabular}{m{0.4\textwidth} m{0.5\textwidth}}
