--- a/layouts/resource.tex
+++ b/layouts/resource.tex
@@ -6,7 +6,6 @@
 
 \sectionnumber{<%=meta.id.replace(/_/g,'\\textunderscore{}')%>}
 \phantomsection\label{resource:<%=meta.id%>}
-<%  if(sidebar) { %>
 \fancyhead[C]{{%
   \setlength{\fboxsep}{0pt} % get rid of any spacing in the colorbox
   \colorbox{navbarbackground}{%
@@ -15,22 +14,19 @@
       \raisebox{-0.5\height}{\rule{0pt}{\headheight}}
       % centre the image vertically in the header
       %TODO use a vector image
-      \raisebox{-0.5\height}{\hspace{5pt}\includegraphics[height=20pt]{cmep-logo3.png}}%
+      \raisebox{-0.5\height}{\headspace\includegraphics[height=20pt]{cmep-logo3}}%
       % choose a nice looking baseline for everything else
       \raisebox{-5pt}{\hspace{5pt}\Large\color{navbartext} Cambridge Mathematics}%
       \textcolor{navbartext}{%
-      \raisebox{-5pt}{\hspace{25pt}}%
-      \hfill
+      \raisebox{-5pt}{\hspace{25pt}\Large\sectfont<%= icon(resourceTypeMeta.icon) %>{} <%=resourceTypeMeta.title.replace(/_/g,'\\textunderscore{}')%>}%
+      \hfill<%  if(sidebar) { %>%
       \raisebox{-5pt}{<% _.each(sidebar.stMetas, function(stMeta) { %><%= stationbutton(stMeta) %><% }); %>%
-      \hspace{5pt}}}%
+      \headspace}}<%  } else { %><%  } %>%
     }%
   }%
 }} % double braces to (hopefully?) contain the change of \fboxsep
-<%  } else { %>
 
-<%  } %>
-\section*{<%= icon(resourceTypeMeta.icon) %>{} <%=resourceTypeMeta.title.replace(/_/g,'\\textunderscore{}')%>}
-
+\section*{<%= alias %>}
 <%= content %>
 
 <%  if(sidebar) { %>
