Add a grunt task for compiling latex

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -522,7 +522,7 @@ roundcorner=8pt%
 \pagestyle{fancy}
 \renewcommand{\sectionmark}[1]{\markboth{#1}{}}
 % Colors used in the headers
-\definecolor{navbarbackground}{HTML}{CCCCCC}
+\definecolor{navbarbackground}{HTML}{FFFFFF}
 \definecolor{navbartext}{HTML}{000000}
 
 % make the headers full width
@@ -571,7 +571,7 @@ roundcorner=8pt%
 \fancyfoot[R]{\small{}Copyright \copyright{} CMEP \number\year{}\headspace}
 
 % Rules
-\renewcommand{\headrulewidth}{0.5pt}
+\renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0pt}
 
 %%% MISC CSS PARAMETERS
