tex layout work

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -447,6 +447,7 @@
 \setlist[pervasiveitems]{label=\textbullet,noitemsep,leftmargin=4em}
 
 \newcommand*{\resitemhighlightfont}{\bfseries}
+\newcommand*{\stationbuttonspace}{\hspace{1ex}}
 % \newcommand*{\stationbutton}[2]{%
 % \begin{tikzpicture}[baseline=(n.base)]
 %   \node[rectangle, rounded corners=8pt, fill=#2, text centered] (n) at (0,0) {\hyperref[station:#1]{\large\sectfont\color{white} #1}} 
