Get the lodash templating described in the wiki into shape, and show it off with a widget_lib resource

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -8,11 +8,14 @@
 \usepackage{fontspec}
 \setmainfont{Helvetica Neue}
 \setsansfont{Helvetica Neue}
-\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Chalkboard.ttc}
+%\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Chalkboard.ttc}
+\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Delius-Regular.ttf}
+%\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Handlee-Regular.ttf}
+%\newfontfamily\ChalkFont[Path = <%= fontpath %>]{PatrickHand-Regular.ttf}
 \newfontfamily\FontAwesome[
-  Path = <%= fontpath %>,
-  UprightFont = *,
-  BoldFont = *,
+  Path = <%= fontpath %>,%
+  UprightFont = *,%
+  BoldFont = *,%
   ItalicFont = *,%
   BoldItalicFont = *]{FontAwesome.otf}
 
