changed chalk colour #59

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -607,7 +607,7 @@ roundcorner=4pt%
 
 % CHALK
 \definecolor{chalkbackground}{HTML}{FFFFFF}
-\definecolor{chalkborder}{HTML}{FFA500}
+\definecolor{chalkborder}{HTML}{0088CC}
 \global\mdfdefinestyle{chalk}{%
 backgroundcolor=chalkbackground,%
 middlelinewidth=3pt,% weirdly the middle line is drawn underneath the dashed one added below
