--- a/layouts/resource.tex
+++ b/layouts/resource.tex
@@ -35,7 +35,7 @@
 }} % double braces to (hopefully?) contain the change of \fboxsep
 
 <% if(meta.title) { %>
-  \section*{<%= meta.title %>}
+  \section*{\huge{<%= meta.title %>}}
 <% }%>
 
 \section*{<%= alias.replace(/_/g,'\\textunderscore{}') %>}
