attempting to pass markdown in a well/chalk environment

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -669,3 +669,8 @@ captionpos=t,                             % sets the caption-position to top
 \newtheorem*{rem}{Remark}
 \newtheorem*{rmk}{Remark}
 \newtheorem*{note}{Note}
+
+% Attempt to fool pandoc that there is no environment
+\newcommand{\startwell}{\begin{mdframed}[style=well]}
+\newcommand{\startchalk}{\begin{mdframed}[style=chalk]}
+\newcommand{\nostyle}{\end{mdframed}}
