more printable tweaks, factored out pass2Constants; added links to printables in resources

--- a/layouts/resource.tex
+++ b/layouts/resource.tex
@@ -50,7 +50,7 @@
 <%    if(sidebar.pvMetas && sidebar.pvMetas.length > 0) { %>
 \begin{pervasiveitems}
 <%      _.each(sidebar.pvMetas, function(pvMeta) { %>
-  \item <%= pvMeta.title %>
+  \item \href{'../../pervasiveIdeas/<%= pvMeta.id %>.pdf'}{<%= pvMeta.title %>}
 <%      }); %>
 \end{pervasiveitems}
 <%    } %>
