almost there for current resources in pdf

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -620,6 +620,9 @@ fontcolor=chalkborder,%
 tikzsetting={draw=chalkborder,dashed,line width=3pt,dash pattern = on 3pt off 3pt}%
 }
 
+% COLLAPSED items get rotated?
+\usepackage{rotating}
+
 % LODASHED
 \usepackage{listings}
 \definecolor{listingfgcolor}{HTML}{DD1144}
