more pass2 lodash tweaks - printables mostly ok now

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -673,3 +673,7 @@ captionpos=t,                             % sets the caption-position to top
 \newtheorem*{rmk}{Remark}
 \newtheorem*{note}{Note}
 
+\newcommand{\Var}{\mathrm{Var}}
+\newcommand{\Cov}{\mathrm{Cov}}
+\newcommand{\E}{\mathrm{E}}
+
