made chalk and well frames avoid page breaks in pdf

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -602,6 +602,7 @@ linecolor=wellborder,%
 middlelinewidth=1pt,%
 innertopmargin=20pt,%
 innerbottommargin=20pt,%
+nobreak=true,%
 roundcorner=4pt%
 }
 
@@ -613,6 +614,7 @@ backgroundcolor=chalkbackground,%
 middlelinewidth=3pt,% weirdly the middle line is drawn underneath the dashed one added below
 middlelinecolor=white,% but if it's removed the dashed one goes too...
 roundcorner=20pt,%
+nobreak=true,%
 innertopmargin=20pt,%
 innerbottommargin=20pt,%
 font=\ChalkFont,%
