update printable stations and resources to take the lastUpdated values from metadata

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -571,7 +571,8 @@ roundcorner=8pt%
 \usepackage{filemod}
 \renewcommand{\filemodsep}{ }
 \fancyfoot{} % clear all footer fields
-\fancyfoot[L]{\headspace\small{}Created \filemodprint{\jobname}}
+%the filemodprint has been superceded by lastUpdated in the metadata
+%\fancyfoot[L]{\headspace\small{}Created \filemodprint{\jobname}}
 \fancyfoot[C]{\small\thepage}
 \fancyfoot[R]{\small{}Copyright \copyright{} CMEP \number\year{}\headspace}
 
