contributing is now linked symbolically to sources to avoid a second copy. Hopefully this will make it through github

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -574,7 +574,7 @@ roundcorner=8pt%
 %the filemodprint has been superceded by lastUpdated in the metadata
 %\fancyfoot[L]{\headspace\small{}Created \filemodprint{\jobname}}
 \fancyfoot[C]{\small\thepage}
-\fancyfoot[R]{\small{}Copyright \copyright{} CMEP \number\year{}\headspace}
+\fancyfoot[R]{\scriptsize{}\copyright{} University of Cambridge unless indicated otherwise. All rights reserved.\headspace}
 
 % Rules
 \renewcommand{\headrulewidth}{0.4pt}
