Printables newer tested, TexLive added to README

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -6,8 +6,9 @@
 
 %%% FONTS
 \usepackage{fontspec}
-\setmainfont[Ligatures=TeX]{Helvetica Neue}
-\setsansfont[Ligatures=TeX]{Helvetica Neue}
+% Uncomment next two lines for Helvetica Neue font
+%\setmainfont[Ligatures=TeX]{Helvetica Neue}
+%\setsansfont[Ligatures=TeX]{Helvetica Neue}
 %\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Chalkboard.ttc}
 \newfontfamily\ChalkFont[Path = <%= fontpath %>]{Delius-Regular.ttf}
 %\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Handlee-Regular.ttf}
