patche din Helvetica Neue

--- a/layouts/_printablesPreamble.tex
+++ b/layouts/_printablesPreamble.tex
@@ -7,8 +7,8 @@
 %%% FONTS
 \usepackage{fontspec}
 % Uncomment next two lines for Helvetica Neue font
-%\setmainfont[Ligatures=TeX]{Helvetica Neue}
-%\setsansfont[Ligatures=TeX]{Helvetica Neue}
+\setmainfont[Ligatures=TeX]{Helvetica Neue}
+\setsansfont[Ligatures=TeX]{Helvetica Neue}
 %\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Chalkboard.ttc}
 \newfontfamily\ChalkFont[Path = <%= fontpath %>]{Delius-Regular.ttf}
 %\newfontfamily\ChalkFont[Path = <%= fontpath %>]{Handlee-Regular.ttf}
