Removing XML namespace from map SVG

--- a/sources/stations/A2.md
+++ b/sources/stations/A2.md
@@ -12,6 +12,4 @@ dependencies:
 
 1. How can we generalise the difference of two squares?
 
-1. How can we rationalise the denominator of an expression involving surds?
-
-1. Is this a test?
+1. How can we add another question and rebuild?
