generateHtml working with newer nicely

--- a/sources/stations/A2.md
+++ b/sources/stations/A2.md
@@ -12,4 +12,4 @@ dependencies:
 
 1. How can we generalise the difference of two squares?
 
-1. What happens if I add a question?
+1. How can I make only one station rebuild?
