All tested and working, apart from mysterious livereload issue

--- a/sources/stations/A88.md
+++ b/sources/stations/A88.md
@@ -1,21 +1,35 @@
 ````
 id: A88
-title: Should there be any more algebra here?
+title: Testing for the new build process
 dependencies: 
     - A9
 ````
-1. Why does it regenerate all stations when one added?
+1. Adding a station? DONE
 
-1. Why doesn’t tubemap update correctly on add/delete? DONE
+1. Deleting a station? DONE (with caveats - not the most efficient way, a better way would be to allow newer to realise about deleting files, rather than doing a full clean!)
 
-1. Why doesn't deleting a station work?
+1. Tubemap update when stations added/deleted? DONE
 
-1. Why is everything getting reloaded?
+1. Content change for stations? DONE
 
-Still need resourceType tests | change content | change layout
+1. Layout change for stations? DONE
 
-All other change content and layout tests passed
+1. Content change for resources? DONE
 
-Test
+1. Layout change for resources? DONE
 
-Test
+1. Content change for resourceTypes? DONE
+
+1. Content change for examQuestions? DONE
+
+1. Content change for pervasiveIdeas? DONE 
+
+1. Layout change for pervasiveIdeas? DONE
+
+1. Change to global layout? DONE
+
+1. Change to map.js? DONE
+
+1. Change to lib file? DONE
+
+1. Why is everything getting livereloaded? FAIL
