Tests completed. Livereload still a mystery, but not a problem

--- a/sources/stations/A88.md
+++ b/sources/stations/A88.md
@@ -32,4 +32,8 @@ dependencies:
 
 1. Change to lib file? DONE
 
-1. Why is everything getting livereloaded? FAIL
+1. Livereload not reloading cumulatively? FAIL
+
+1. Livereload not reloading in duplicate? FAIL
+
+1. Watch Gruntfile for changes? DONE
